<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:padding="16dp"
    android:rowCount="4">

    <Button
        android:id="@+id/btn_1"
        style="@style/NumberButton"
        android:text="@string/button_number_1" />

    <Button
        android:id="@+id/btn_2"
        style="@style/NumberButton"
        android:text="@string/button_number_2" />

    <Button
        android:id="@+id/btn_3"
        style="@style/NumberButton"
        android:text="@string/button_number_3" />

    <Button
        android:id="@+id/btn_4"
        style="@style/NumberButton"
        android:text="@string/button_number_4" />

    <Button
        android:id="@+id/btn_5"
        style="@style/NumberButton"
        android:text="@string/button_number_5" />

    <Button
        android:id="@+id/btn_6"
        style="@style/NumberButton"
        android:text="@string/button_number_6" />

    <Button
        android:id="@+id/btn_7"
        style="@style/NumberButton"
        android:text="@string/button_number_7" />

    <Button
        android:id="@+id/btn_8"
        style="@style/NumberButton"
        android:text="@string/button_number_8" />

    <Button
        android:id="@+id/btn_9"
        style="@style/NumberButton"
        android:text="@string/button_number_9" />

    <ImageButton
        android:id="@+id/btn_auth_navigate_to_fingerprint"
        style="@style/ImageButtonPin"
        android:contentDescription="@string/todo_button_auth_to_fingerprint"
        android:src="@drawable/ic_fingerprint" />

    <Button
        android:id="@+id/btn_0"
        style="@style/NumberButton"
        android:text="@string/button_number_0" />

    <ImageButton
        android:id="@+id/btn_backspace"
        style="@style/ImageButtonPin"
        android:contentDescription="@string/todo_button_auth_pin_delete"
        android:src="@drawable/ic_backspace" />

</GridLayout>
